compiler/toc_hir_lowering/tests/snapshots/lowering__lower_import_stmt-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "\n    var a : int\n    module _\n        import const var a\n    end _"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(3)
    Module@(FileId(1), 0..66): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..66): []
        StmtItem@(FileId(1), 5..16): ItemId(0)
          ConstVar@(FileId(1), 5..16): var "a"@(FileId(1), 9..10)
            Primitive@(FileId(1), 13..16): Int
        StmtItem@(FileId(1), 21..66): ItemId(2)
          Module@(FileId(1), 21..66): "_"@(FileId(1), 28..29)
            StmtBody@(FileId(1), 51..56): []
              StmtItem@(FileId(1), 51..56): ItemId(1)
                ConstVar@(FileId(1), 51..56): var "a"@(FileId(1), 55..56)
error in file FileId(1) at 51..54: unexpected token
| error in file FileId(1) for 51..54: expected string literal or identifier, but found `var`
error in file FileId(1) at 61..64: unexpected token
| error in file FileId(1) for 61..64: expected `,`, `:` or `:=`, but found `end`

