compiler/toc_hir_lowering/tests/snapshots/lowering__lower_import_stmt-5.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\n    var a : int\n    proc _\n        import const var a\n    end _"
---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(3)
    Module@(FileId(1), 0..64): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..64): []
        StmtItem@(FileId(1), 5..16): ItemId(0)
          ConstVar@(FileId(1), 5..16): var "a"@(FileId(1), 9..10)
            Primitive@(FileId(1), 13..16): Int
        StmtItem@(FileId(1), 21..64): ItemId(2)
          Subprogram@(FileId(1), 21..64): "_"@(FileId(1), 26..27)
            Void@(FileId(1), 21..27)
            Import@(FileId(1), 43..54): SameAsItem local("a"@(FileId(1), 9..10))
            StmtBody@(FileId(1), 59..59): []
error in file FileId(1) at 49..52: cannot use `const` and `var` on the same import
| error in file FileId(1) for 43..48: first conflicting `const`
| error in file FileId(1) for 49..52: first conflicting `var`

