compiler/toc_hir_lowering/tests/snapshots/lowering__lower_import_stmt-8.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\n    var a : int\n    proc _\n        import a, a\n    end _"
---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(3)
    Module@(FileId(1), 0..57): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..57): []
        StmtItem@(FileId(1), 5..16): ItemId(0)
          ConstVar@(FileId(1), 5..16): var "a"@(FileId(1), 9..10)
            Primitive@(FileId(1), 13..16): Int
        StmtItem@(FileId(1), 21..57): ItemId(2)
          Subprogram@(FileId(1), 21..57): "_"@(FileId(1), 26..27)
            Void@(FileId(1), 21..27)
            Import@(FileId(1), 43..44): SameAsItem local("a"@(FileId(1), 9..10))
            StmtBody@(FileId(1), 52..52): []
error in file FileId(1) at 46..47: import item is ignored
| error in file FileId(1) for 46..47: `a` is already imported...
| note in file FileId(1) for 43..44: by this import

