compiler/toc_hir_lowering/tests/snapshots/lowering__lower_import_stmt-9.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\n    module _\n        import _\n    end _\n    "
---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..45): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..40): []
        StmtItem@(FileId(1), 5..40): ItemId(1)
          Module@(FileId(1), 5..40): "_"@(FileId(1), 12..13)
            Import@(FileId(1), 29..30): SameAsItem "_"@(FileId(1), 29..30)
            StmtBody@(FileId(1), 35..35): []
error in file FileId(1) at 29..30: `_` is already declared in this scope
| note in file FileId(1) for 12..13: `_` previously declared here
| error in file FileId(1) for 29..30: `_` imported here

