compiler/toc_hir_lowering/tests/snapshots/lowering__lower_int_literal-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := 99999999999999999999"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..25): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..25): []
        Assign@(FileId(1), 0..25)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..25): Integer(0)
error in file FileId(1) at 5..25: int literal is too large

