compiler/toc_hir_lowering/tests/snapshots/lowering__lower_int_literal.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "const a := 01234560"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..19): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..19): []
        StmtItem@(FileId(1), 0..19): ItemId(0)
          ConstVar@(FileId(1), 0..19): const "a"@(FileId(1), 6..7)
            ExprBody@(FileId(1), 11..19)
              Literal@(FileId(1), 11..19): Integer(1234560)

