compiler/toc_hir_lowering/tests/snapshots/lowering__lower_int_radix_literal-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "var _ : int _ := 10#99999999999999999999"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..40): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..40): []
        StmtItem@(FileId(1), 0..11): ItemId(0)
          ConstVar@(FileId(1), 0..11): var "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..11): Int
        Assign@(FileId(1), 12..40)
          Name@(FileId(1), 12..13): "_"@(FileId(1), 4..5)
          Literal@(FileId(1), 17..40): Integer(0)
error in file FileId(1) at 17..40: invalid int literal
| error in file FileId(1) for 20..40: number is too large

